MAJOR UPDATE! Switched database & included aspect ratios

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Clerk Performance Optimizations -->
+    <link rel="preconnect" href="https://clerk.accounts.dev">
+    <link rel="preconnect" href="https://accounts.google.com">
+    <link rel="dns-prefetch" href="https://accounts.google.com">
+    <link rel="dns-prefetch" href="https://ssl.gstatic.com">
+    
     <title>ClipGenius</title>
   </head>
   <body>
